--- a/package.json
+++ b/package.json
@@ -6,17 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-products": "node ./scripts/generate-dummy-products.js"
+
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.645.0",
+    "@aws-sdk/lib-dynamodb": "^3.645.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "next": "14.2.8",
+    "next-swagger-doc": "^0.4.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.8"
+    "swagger-ui-react": "^5.17.14",
+    "yaml": "^2.5.1"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.8"
+    "eslint-config-next": "14.2.8",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
