--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.645.0",
+    "@aws-sdk/client-s3": "^3.658.1",
     "@aws-sdk/lib-dynamodb": "^3.645.0",
     "bcryptjs": "^2.4.3",
     "joi": "^17.13.3",
