--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@aws-sdk/client-dynamodb": "^3.645.0",
     "@aws-sdk/client-s3": "^3.658.1",
     "@aws-sdk/lib-dynamodb": "^3.645.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "bcryptjs": "^2.4.3",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
