--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@opensearch-project/opensearch": "^2.12.0",
     "bcryptjs": "^2.4.3",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
