--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "next start",
     "lint": "next lint",
     "generate-products": "node ./scripts/generate-dummy-products.js",
-    "generate-stock-shipment": "node ./scripts/generate-dummy-stock-shipment.js"
+    "generate-stock-shipment": "node ./scripts/generate-dummy-stock-shipment.js",
+    "generate-orders": "node ./scripts/generate-dummy-orders.js"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.645.0",
     "@aws-sdk/client-s3": "^3.658.1",
     "@aws-sdk/lib-dynamodb": "^3.645.0",
+    "@faker-js/faker": "^9.0.3",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
