--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "bcryptjs": "^2.4.3",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.2.8",
+    "next": "^14.2.15",
     "next-auth": "^5.0.0-beta.21",
     "next-swagger-doc": "^0.4.0",
     "react": "^18",
