--- a/app/docs/products/update-products.yml
+++ b/app/docs/products/update-products.yml
@@ -1,14 +1,12 @@
 paths:
-  /v1/vendor/upload-products:
-    post:
-      summary: Upload product catalog
+  /products/edit:
+    put:
+      summary: Update existing products
       tags:
         - Product
       description: >
-        Endpoint for vendors to upload their product catalog in batches.
-        The payload must contain a maximum of 500 products and should not exceed 5 MB in size.
+        Endpoint for vendors to update existing products in batches. The payload size must not exceed 2 MB. The `vendor_sku` is required, and any other attribute can be optionally updated. The request must contain at least one field to update in addition to `vendor_sku`.
         Requires API token for authentication.
-
       security:
         - BearerAuth: []
       requestBody:
@@ -22,15 +20,15 @@ paths:
                   type: array
                   maxItems: 5000
                   items:
-                    $ref: '#/components/schemas/product'
+                    $ref: "#/components/schemas/product_update"
       responses:
-        '200':
-          description: Products uploaded successfully
-        '400':
+        "200":
+          description: Products updated successfully
+        "400":
           description: Validation errors or request payload exceeds limits
-        '401':
+        "401":
           description: Unauthorized - Missing or invalid API token
-        '413':
-          description: Payload exceeds the allowed size limit (5 MB)
-        '500':
+        "413":
+          description: Payload exceeds the allowed size limit (2 MB)
+        "500":
           description: Server error
