--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "generate-orders": "node ./scripts/generate-dummy-orders.js"
   },
   "dependencies": {
+    "@aws-sdk/client-athena": "^3.679.0",
     "@aws-sdk/client-dynamodb": "^3.645.0",
+    "@aws-sdk/client-firehose": "^3.678.0",
     "@aws-sdk/client-s3": "^3.658.1",
     "@aws-sdk/lib-dynamodb": "^3.645.0",
     "@faker-js/faker": "^9.0.3",
