change the url path for the api

--- a/app/docs/orders/update.yml
+++ b/app/docs/orders/update.yml
@@ -1,5 +1,5 @@
 paths:
-  /v1/vendor/orders/update:
+  /orders/update:
     patch:
       summary: Update order buyer information
       description: >
