--- a/app/docs/shipments/view.yml
+++ b/app/docs/shipments/view.yml
@@ -1,5 +1,5 @@
 paths:
-  /v1/vendor/stock-shipments:
+  /stock-shipments:
     get:
       summary: Retrieve stock shipment(s)
       description: >
