--- a/app/docs/shipments/edit.yml
+++ b/app/docs/shipments/edit.yml
@@ -1,5 +1,5 @@
 paths:
-  /v1/vendor/stock-shipments/edit:
+  /stock-shipments/edit:
     patch:
       summary: Edit an existing stock shipment
       description: >
