Refactor: Remove commented out code and update nicotine attribute handling

--- a/app/docs/schemas/product/product_update.yml
+++ b/app/docs/schemas/product/product_update.yml
@@ -38,4 +38,4 @@ product_update:
       example:
         color: "Blue"
         size: "Large"
-        nicotine: ["6mg", "12mg"]
+        nicotine: "6mg"
