--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-swagger-doc": "^0.4.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "swagger-ui-react": "^5.17.14",
     "yaml": "^2.6.0"
   },
@@ -38,6 +39,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
+    "sass": "^1.80.6",
     "tailwindcss": "^3.4.1"
   }
 }
