--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@opensearch-project/opensearch": "^2.12.0",
     "bcryptjs": "^2.4.3",
     "joi": "^17.13.3",
+    "jsbarcode": "^3.11.6",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.15",
     "next-auth": "^5.0.0-beta.21",
