--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@heroicons/react": "^2.1.5",
     "@opensearch-project/opensearch": "^2.12.0",
     "bcryptjs": "^2.4.3",
+    "i18n-iso-countries": "^7.13.0",
     "joi": "^17.13.3",
     "jsbarcode": "^3.11.6",
     "jsonwebtoken": "^9.0.2",
