--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3002",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
     "start-clean": "rm -rf .next && next dev -p 3002",
@@ -18,6 +18,7 @@
     "@aws-sdk/client-firehose": "^3.678.0",
     "@aws-sdk/client-s3": "^3.658.1",
     "@aws-sdk/lib-dynamodb": "^3.645.0",
+    "@aws-sdk/s3-request-presigner": "^3.701.0",
     "@faker-js/faker": "^9.0.3",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
