corect the spelling mistake

--- a/app/docs/schemas/order/orderItem.yml
+++ b/app/docs/schemas/order/orderItem.yml
@@ -10,16 +10,16 @@ OrderItem:
     sales_value:
       type: number
       exclusiveMinimum: 0
-    custom_code:
+    customs_code:
       type: string
       example: Custom code required for non-UK buyers.
-    custom_description:
+    customs_description:
       type: string
-      example: Custom description required for non-UK buyers.
+      example: Customs description required for non-UK buyers.
 
   required:
     - vendor_sku
     - quantity
     - sales_value
-    - custom_code # if buyer's country is not the United Kingdom
-    - custom_description # if buyer's country is not the United Kingdom
+    - customs_code # if buyer's country is not the United Kingdom
+    - customs_description # if buyer's country is not the United Kingdom
