--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "^14.2.15",
     "next-auth": "^5.0.0-beta.21",
     "next-swagger-doc": "^0.4.0",
+    "p-limit": "^6.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
