--- a/package.json
+++ b/package.json
@@ -25,11 +25,16 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.1.5",
     "@opensearch-project/opensearch": "^2.12.0",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "i18n-iso-countries": "^7.13.0",
     "joi": "^17.13.3",
     "jsbarcode": "^3.11.6",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.468.0",
     "next": "^14.2.15",
     "next-auth": "^5.0.0-beta.21",
     "next-swagger-doc": "^0.4.0",
@@ -38,6 +43,8 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "swagger-ui-react": "^5.17.14",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "yaml": "^2.6.0"
   },
   "devDependencies": {
